# An-Agent-Journey

./: .gitignore
next-agent/: .gitignore  LICENSE  README.md  main.py  package-lock.json  package.json  pyproject.toml  skills-lock.json  test_worker.py
next-agent/.agents/skills/tailwind-css/: SKILL.md
next-agent/nextjs_agent/: __init__.py  cli.py  config.py  runner.py  sessions.py
next-agent/nextjs_agent/agent/: worker_client.py
next-agent/nextjs_agent/agents/main/: orchestrator_client.py
next-agent/nextjs_agent/agents/orchestrator/: orchestrator_agent.py  orchestrator_client.py  orchestrator_sys_prompt.py
next-agent/nextjs_agent/agents/worker/: worker_agent.py  worker_client.py  worker_sys_prompt.py
next-agent/nextjs_agent/models/: exceptions.py  orchestrator_response.py  state.py  task.py  task_result.py  worker_models.py
next-agent/nextjs_agent/tools/: base.py  tools_registry.py
next-agent/nextjs_agent/tools/dir-ops/: ListDirTool.py
next-agent/nextjs_agent/tools/dir_ops/: CreateDirTool.py
next-agent/nextjs_agent/tools/file-ops/: DeleteFileTool.py  EditFileTool.py  FindAndReplaceTool.py  ReadFileTool.py
next-agent/nextjs_agent/tools/file_ops/: EditFileTool.py  FindAndReplaceTool.py  ReadFileTool.py  WriteFileTool.py
next-agent/nextjs_agent/tools/package_tools/: AddPackageTool.py  RemovePackageTool.py  detect_manager.py
next-agent/nextjs_agent/tools/search/: SearchCodeTool.py
next-agent/nextjs_agent/tools/skill_tools/: ListSkillsTool.py  ReadSkillTool.py
next-agent/nextjs_agent/utils/: context_compactor.py  token_counter.py
(+40 files in other folders)
