[project]
name = "nextjs-agent"
version = "0.1.0"
description = "An AI agent harness for Next.js projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Aditya Rawat" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tiktoken>=0.13.0",
]

[project.scripts]
nextjs_agent = "nextjs_agent.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
